--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -4,24 +4,50 @@
     padding: 8px;
 }
 
-.navbar{
+.navbar {
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
     margin: 0px auto;
     max-width: 1200px;
 }
 
-.carrito-link{
+.navLinks {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.navLinks a {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    text-transform: uppercase;
+}
+
+.carrito-link {
     cursor: pointer;
     margin: auto 0px;
     text-decoration: none;
 }
 
-.imgCarrito{
+.imgCarrito {
     height: 50px;
     filter: invert(100%) sepia(68%) saturate(0%) hue-rotate(29deg) brightness(110%) contrast(102%);
 }
 
-.imgLogo{
+.imgLogo {
     height: 80px;
+}
+
+@media (min-width: 500px) {
+    .navLinks a:hover {
+        color: blue;
+    }
+
+    .navbar {
+        flex-direction: row;
+    }
 }
