--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,24 @@
-body {
+/* body {
     margin: 0;
     overflow-x: hidden;
     padding: 0;
-}
+} */
+
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
+    padding: 0;
+  }
+
+  body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Al menos 100% del alto de la ventana */
+  }
+
+  #root{
+    flex: 1;
+  }
